# ai-invention-e0166a-cross-representation-neighborhood-disson

./: README.md
dataset_iter1_clinical_triage/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter1_clinical_triage/src/: data.py  preview_data_out.json
dataset_iter4_clinical_text_d/demo/: data_code_demo.ipynb  mini_demo_data.json
dataset_iter4_clinical_text_d/src/: data.py  mini_data_out.json  preview_data_out.json
evaluation_iter3_crnd_vs_baselin/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_crnd_vs_baselin/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json
evaluation_iter4_cross_represent/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_cross_represent/src/: eval.py  eval_out.json  full_eval_out.json  preview_eval_out.json
evaluation_iter5_comprehensive_c/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_comprehensive_c/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json
evaluation_iter6_definitive_fina/demo/: eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_definitive_fina/src/: eval.py  mini_eval_out.json  preview_eval_out.json
experiment_iter2_baseline_noise/demo/: method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_baseline_noise/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_baseline_noise/src/baseline_noise_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_iter2_baseline_noise/src/logs/: full_run.out  full_run_final.out  resume_final.out  resume_run.out
experiment_iter3_crnd_ablation_r/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_crnd_ablation_r/src/crnd_ablation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_iter5_hybrid_crnd_l_e/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter5_hybrid_crnd_l_e/src/crnd_hybrid_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experiment_iter6_cross_represent/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
paper/: paper.tex
paper_latex/: paper.tex
paper_latex/workspace/: paper.aux  (+4 more)
(+28 files in other folders)
