[project]
name = "baseline-noise-detection"
version = "0.1.0"
description = "Baseline noise detection methods: kDN, Cleanlab, Single-Space k-NN, Random vs CRND"
requires-python = ">=3.10,<3.12"
dependencies = [
    "scikit-learn>=1.3.0",
    "cleanlab>=2.6.0",
    "sentence-transformers>=2.2.0",
    "scipy>=1.11.0",
    "numpy>=1.26.0,<2.3.0",
    "loguru>=0.7.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
