[project]
name = "crnd-ablation"
version = "0.1.0"
description = "CRND Ablation & Robustness Analysis"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26,<2.3",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "pandas>=2.0",
    "loguru>=0.7",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "pingouin>=0.5.3",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
