[project]
name = "crnd_hybrid_experiment"
version = "0.1.0"
description = "Cross-Representation Neighborhood Dissonance with hybrid noise detection metrics"
requires-python = ">=3.10,<3.12"
dependencies = [
    "scikit-learn>=1.3.0,<1.6",
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.11.0",
    "loguru>=0.7.0",
    "cleanlab>=2.6.0",
    "xgboost>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
