[project]
name = "crnd_experiment"
version = "0.1.0"
description = "Cross-Representation Neighborhood Dissonance + Schoener's D Ecological Niche Overlap"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.26.0,<2.3.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "loguru>=0.7",
    "tqdm",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
